# zetherion-ai

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.api  Dockerfile.assess  Dockerfile.dev  Dockerfile.dev-agent  Dockerfile.dev-tools  Dockerfile.skills  Dockerfile.updater  Dockerfile.whatsapp-bridge  GITHUB_SECRETS.md  INTEGRATION_TESTS_SUMMARY.md  README.md  ROUTER_UPGRADE_NOTES.md  SECURITY.md  TESTING_QUICKSTART.md  WINDOWS_DEPLOYMENT.md  cleanup.ps1  cleanup.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-windows-deployment.ps1  sitemap.xml  (+7 more)
.ci/: ci_hardening_workstream_manifest.json  e2e-receipt.json  isolation_compatibility_manifest.json  local_gate_manifest.json  pipeline_contract.json  public-core-export-manifest.json  system_validation_manifest.json
.git-hooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
APP_TESTER_SKILL_PLAN/: index.html
ARCHITECTURE/: index.html
CHANGELOG/: index.html
CI_CD/: index.html
COMMANDS/: index.html
CONFIGURATION/: index.html
CONTRIBUTING/: index.html
COST_TRACKING/: index.html
DEVELOPMENT/: index.html
DOCKER_ARCHITECTURE/: index.html
FAQ/: index.html
FEATURES/: index.html
GITHUB_SECRETS/: index.html
HARDWARE-RECOMMENDATIONS/: index.html
INSTALLATION/: index.html
MULTI_TENANT_API_PLAN/: index.html
PERSONALITY_PERSISTENCE_WRITEUP/: index.html
PROFILES/: index.html
PROVIDER_AGNOSTIC_WORK_ROUTER_PLAN/: index.html
SECURITY/: index.html
SKILLS/: index.html
STARTUP_WALKTHROUGH/: index.html
TESTING/: index.html
TESTING-DEPLOYMENT/: index.html
TROUBLESHOOTING/: index.html
WINDOWS_DEPLOYMENT/: index.html
WINDOWS_REMOTE_INSTALL_LOG/: index.html
YOUTUBE_SKILL_OUTPUT_SCHEMAS/: index.html
cgs/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cgs/app/: globals.css  (+2 more)
config/: qdrant.yaml  windows-remote.yml.example
docs/: APP_TESTER_SKILL_PLAN.md  ARCHITECTURE.md  CI_CD.md  COMMANDS.md  CONFIGURATION.md  COST_TRACKING.md  DEVELOPMENT.md  DOCKER_ARCHITECTURE.md  FAQ.md  FEATURES.md  GITHUB_SECRETS.md  HARDWARE-RECOMMENDATIONS.md  INSTALLATION.md  MULTI_TENANT_API_PLAN.md  PERSONALITY_PERSISTENCE_WRITEUP.md  PROFILES.md  PROVIDER_AGNOSTIC_WORK_ROUTER_PLAN.md  SECURITY.md  SKILLS.md  STARTUP_WALKTHROUGH.md  TESTING-DEPLOYMENT.md  TESTING.md  TROUBLESHOOTING.md  WINDOWS_DEPLOYMENT.md  WINDOWS_HOST_RESEARCH.md  WINDOWS_REMOTE_INSTALL_LOG.md  YOUTUBE_SKILL_OUTPUT_SCHEMAS.md  index.md
memory/: licensing-polar.md  phase10-gcp-workspace-policy-reviewer.md  phase6-discord-management.md  phase7-github-management.md  phase8-gmail-correlator.md  phase9-personal-understanding-upgrade.md
scripts/: assess-system.py  backup-create.sh  backup-restore.sh  backup-verify.sh  backup_local.py  benchmark-email-classifier.py  benchmark-personality-extractor.py  benchmark-router-security.py  benchmark-router.py  build-docs-gap-triage.py  check-announcement-dm-guard.py  check-cgs-route-doc-parity.py  check-cgs-ui.sh  check-cicd-success.sh  check-docs-links.py  check-docs-nav.py  check-endpoint-doc-bundle.py  check-env-doc-parity.py  check-optional-service-guards.py  check-qdrant-scope-guard.py  check-route-doc-parity.py  check-scope-diff.sh  check-windows-deploy-contract.py  check-windows-powershell-compat.py  check-zetherion-boundary.sh  check_pipeline_contract.py  check_pr_metadata.py  ci-required-e2e-gate.sh  ci_cache_hygiene.py  ci_cost_report.py  ci_e2e_risk_classifier.py  ci_failure_attribution.py  ci_required_e2e_gate.py  deploy.sh  discord_e2e_run_manager.py  discord_e2e_run_manager.sh  docker-python-tool.sh  e2e_run_manager.py  e2e_run_manager.sh  generate-email-dataset.py  (+32 more)
search/: search_index.json
technical/: openapi-cgs-gateway.yaml  openapi-public-api.yaml
tests/: conftest.py  test_agent_core.py  test_announcement_policy.py  test_announcement_storage.py  test_api_models.py  test_bot.py  test_config.py  test_embeddings.py  test_fleet_insights_skill.py  test_health_analyzer.py  test_health_analyzer_skill.py  test_health_collector.py  test_health_storage.py  test_local_backup.py  test_qdrant.py  test_router.py  test_router_factory.py  test_router_ollama.py  test_security.py  test_self_healer.py  test_telemetry_models.py  test_telemetry_receiver.py  test_telemetry_reporter.py  test_telemetry_storage.py  test_update_checker_skill.py  test_update_manager.py  test_updater_sidecar_auth.py  test_updater_sidecar_executor.py  test_updater_sidecar_health.py  test_updater_sidecar_models.py  test_updater_sidecar_server.py  test_youtube_assumptions.py  test_youtube_intelligence.py  test_youtube_management.py  test_youtube_models.py  test_youtube_prompts.py  test_youtube_storage.py  test_youtube_strategy.py  test_youtube_trust.py
updater_sidecar/: __init__.py  __main__.py  auth.py  executor.py  health_checker.py  models.py  server.py
zetherion-dev-agent/: pyproject.toml
zetherion-dev-agent/src/zetherion_dev_agent/: __init__.py  cli.py  config.py  daemon.py  docker_monitor.py  policy_store.py  sender.py  state.py  worker_runtime.py
zetherion-dev-agent/src/zetherion_dev_agent/watchers/: annotations.py  claude_code.py  git.py
zetherion-whatsapp-bridge/: README.md  package.json
(+738 files in other folders)
