[project]
name = "zetherion-ai"
version = "0.1.0"
description = "Secure personal AI assistant with encrypted memory and multi-provider LLM routing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"  # Supports 3.12+ locally, 3.14 in Docker (Chainguard)
authors = [
    { name = "James Hinton" }
]

dependencies = [
    "discord.py>=2.3.0",
    "qdrant-client>=1.7.0",
    "google-genai>=1.0.0",
    "anthropic>=0.18.0",
    "openai>=1.58.0",
    "cryptography>=46.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "cachetools>=5.5.0",
    "aiohttp>=3.13.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "watchfiles>=0.21.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/zetherion_ai"]

[tool.hatch.build.targets.wheel]
packages = ["src/zetherion_ai"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Allow nested with statements in tests for clarity
"tests/**/*.py" = ["SIM117"]

[tool.mypy]
python_version = "3.12"
strict = true
# Disable unused-ignore warnings - varies between environments/versions
warn_unused_ignores = false

# Ignore missing imports for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/zetherion_ai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "discord_e2e: marks tests as Discord end-to-end tests (deselect with '-m \"not discord_e2e\"')",
]

[tool.coverage.run]
source = ["src/zetherion_ai"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
# Exclude test and script directories from bandit scans
exclude_dirs = ["tests", "scripts"]
# Skip specific checks that generate false positives
skips = [
    # B101: assert_used - Asserts are fine in tests
    "B101",
]
