[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zetherion-dev-agent"
version = "0.1.0"
description = "Local development agent for Zetherion AI — monitors git, annotations, and Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
]

[project.scripts]
zetherion-dev-agent = "zetherion_dev_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zetherion_dev_agent"]
